--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,3 +1,3 @@
-<a routerLink="/login">Login</a> |
+<i class="fab fa-accessible-icon"></i><a routerLink="/login">Login</a> |
 <a routerLink="/home">Home</a> |
 <a routerLink="/profile">Profile</a> |
