--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,27 @@
-<p>
-  login works!
-</p>
+<div class="loginContainer">
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <div class="col-md-3">
+        <img src="assets/img/generic_avatar.png" alt="avatar-login" class="avatarImage img-fluid">
+      </div>
+    </div>
+    <div class="row justify-content-md-center">
+      <div class="col-md-6">
+        <div class="center">
+          <h3>Iniciar Sesión</h3>
+        </div>
+        <p *ngIf="operation === 'register'">Ya tienes cuenta?<a class="link" (click)="operation = 'login'" > Has Login</a></p>
+        <p *ngIf="operation === 'login'">No tienes cuenta?<a class="link" (click)="operation = 'register'"> Registrarse</a></p>
+        <div class="boreredContainer">
+          <input type="email" class="form-control marto15" placeholder="Ingrese Email">
+          <input type="password" class="form-control marto15" placeholder="Ingrese Contraseña">
+          <input type="text" class="form-control marto15" placeholder="Ingrese Nick">
+        </div>
+        <div class="center marto15">
+          <a href="" class="btn btn-light btn-login">Iniciar Sesión</a>
+          <a href="" class="btn btn-light btn-login">Registrar</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
